<resources>
    <string name="app_name">AndroidFastFrame</string>
    <string name="money_format">%1$s元</string>
    <string name="distance_format">共%1$s公里</string>


    <string name="campus_has_authed">您已完成当前模式认证，暂不可修改。</string>
    <string name="campus_authed_type_title">当前用户身份</string>
    <string name="campus_select_auth_type_title">请选择用户身份</string>
    <string name="aima_partner_info">我的收益</string>

    <string name="bike_status_lock">车未设防</string>
    <string name="bike_status_unlock">车已设防</string>

    <string name="register_title_tip">欢迎注册xxx</string>
    <string name="login_title_tip">欢迎登录xxx</string>
    <string name="login_tip_input_mobile">请输入手机号码</string>
    <string name="login_tip_input_password">请输入登录密码</string>
    <string name="login_tip_input_smscode">请输入验证码</string>
    <string name="login_tip_send_smscode">发送验证码</string>
    <string name="login_btn_sign_in">登 录</string>
    <string name="login_btn_register">立即注册</string>
    <string name="register_tip_input_password">密码（6-16个字符）</string>
    <string name="wy_copyright">Copyright©2019</string>
    <string name="wy_copyright_text">xxx 版权所有</string>

    <string name="title_text_mine">我的</string>
    <string name="activity_mine_bikes">我的车辆</string>
    <string name="activity_mine_rides">我的行程</string>
    <string name="activity_mine_insurance">我的保单</string>
    <string name="activity_buy_insurance">购买保险</string>

    <string name="title_text_new_bike">添加车辆</string>
    <string name="activity_home_overlook_bike">查看车辆位置</string>

    <string name="activity_emergency_report">报警记录</string>
    <string name="select_bike_tip">请选择绑定的车辆编号</string>

    <string name="text_search">请输入车辆GPS编号</string>
    <string name="btn_bound_other">绑定其他人</string>
    <string name="btn_unbind_bike">确认解绑</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="buy_insurance_success">购买成功。</string>
    <string name="buy_insurance_no_pay">您的资费中包含此保险一份，现已免费领取成功，请在我的保单中进行查看。</string>
    <string name="resume_buy_insurance_success">续保成功，请在我的保单中进行查看。</string>
    <string name="buy_insurance_not_available">非常抱歉，根据保险公司要求，此保险暂无适合您的资费套餐，请选购其他保险。</string>
    <string name="insurance_price_info">1. 购买迅踪定位器，免费送车辆盗抢险保额1000元(时长12个月)\n2. 每增加1000元保额(时长12个月)，资费增加15元\n3. 购买保额大于车辆价值时，索赔时以车辆实际价值为准\n具体细则请查看[条款详情]</string>

    <!-- 权限申请-->
    <string name="permission_CAMERA">相机</string>
    <string name="permission_CALL_PHONE">通话</string>
    <string name="permission_RECORD_AUDIO">录音</string>
    <string name="permission_ACCESS_FINE_LOCATION">定位</string>
    <string name="permission_ACCESS_COARSE_LOCATION">位置</string>
    <string name="permission_READ_CONTACTS">读取通讯录</string>
    <string name="permission_SEND_SMS">发送短信</string>
    <string name="permission_READ_EXTERNAL_STORAGE">读取外部存储</string>
    <string name="permission_WRITE_EXTERNAL_STORAGE">写入外部存储</string>
    <string name="permission_setting_tip">点击\'权限管理\'，允许相应设置</string>
    <string name="permission_cannot_go_to_setting">请到手机的\'设置\' - \'应用程序\' - 找到App并允许相关权限</string>

    <string name="permission">权限</string>
    <string name="permission_option">该操作需要以下权限，请进入\'权限管理\'中允许该权限。否则该功能无法正常使用。\n</string>
    <string name="permission_to_setting">去设置</string>
    <string name="permission_cancle">取消</string>


    //以下为pdf签名相关的string
    <string name="app_share_file">Choose file with:</string>

    <string name="app_portrait">Portrait</string>

    // Snackbar // Toasts

    <string name="toast_yes">确认</string>
    <string name="toast_cancel">取消</string>
    <string name="toast_successfully">文件已成功创建</string>
    <string name="toast_successfully_not">文件处理失败了.</string>
    <string name="toast_open">打开?</string>
    <string name="toast_install_app">Please install an app to perform action.</string>
    <string name="toast_noPDF">请先选择一个pdf文件.</string>
    <string name="toast_extension">不支持的文件类型</string>

    // Main menu
    <string name="action_share">分享文件</string>
    <string name="action_settings">设置</string>
    <string name="action_share_with">分享文件至:</string>
    <string name="action_share_Text">在附件中，您可以找到PDF文件:</string>


    <string name="choose_title">编辑文件名称</string>

    // Settings
    <string name="settings_prefApp">关于app</string>

    <string name="pref_license">协议</string>
    <string name="pref_license_summary">The app is completely open source and licensed under GPL3.</string>

    <string name="pref_imageQuality">图片质量</string>
    <string name="pref_imageQuality_summary">设置图像质量。更高质量会导致PDF文件体积变大.</string>

    <string name="pref_backup">备份</string>
    <string name="pref_backup_summary">是否要在操作（例如删除或添加页面）之前备份PDF文件？</string>

    <string name="pref_folder">自定义目录</string>
    <string name="pref_folder_summary">Let empty to use the default directory (\"/Android/data/com.hexin.notaria/\"). Enter the path
        to your desired folder on your sdcard. The path must begin and end with \"/\" like \"/Download/PDF/\".
        If the desired directory does not exist, it will be generated automatically.</string>

    <string name="action_donate">Donate</string>
    <string name="action_donate_summary">If you like the app, you can donate to me via Paypal.</string>

    <string name="action_changelog">修改日志</string>
    <string name="action_changelog_summary">See what\'s new …</string>

    <string name="pref_notShow_title">帮助指引</string>
    <string name="pref_notShow_title_summary">启动时显示帮助指引.</string>

    <string name="action_openSettings">关于</string>
    <string name="action_openSettings_summary">Open via the system settings the app info of the app. There you can,
        depending on your Android version, manage several things (Storage, network traffic, permissions, …).</string>

    <string-array name="listArrayImage">
        <item>高 (100%)</item>
        <item>普通 (80%)</item>
        <item>低 (60%)</item>
    </string-array>

    <string-array name="listValuesImage">
        <item>100</item>
        <item>80</item>
        <item>60</item>
    </string-array>


    //Image cropper


    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">取消</string>
    <string name="search_backwards">搜索后一个</string>
    <string name="search_forwards">搜索前一个</string>
    <string name="search_document">搜索文档</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">内容</string>
    <string name="enter_password">输入密码</string>
    <string name="text_not_found">未找到文本</string>
    <string name="searching_">搜索&#8230;</string>
    <string name="toggle_links">高亮链接</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="search">搜索</string>
    <string name="strike_out">删除线</string>
    <string name="delete">删除</string>
    <string name="highlight">高亮</string>
    <string name="underline">下划线</string>
    <string name="ink">Ink</string>
    <string name="dismiss">确定</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="select_text">请选择文本</string>
    <string name="copied_to_clipboard">已复制到粘贴板</string>
    <string name="no_text_selected">未选择文本</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">没有保存</string>
    <string name="document_has_changes_save_them_">文档有修改，需要保存吗?</string>
    <string name="cannot_open_document">无法打开此类型文档</string>
    <string name="cannot_open_document_Reason">不能打开文件: %1$s</string>
    <string name="cannot_open_file_Path">不能打开文件: %1$s</string>
    <string name="cannot_open_buffer">不能打开文件流~</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">好的</string>
    <string name="choose_value">选择~</string>
    <string name="not_supported">不支持的</string>
    <string name="more">更多</string>
    <string name="accept">同意</string>
    <string name="copy_text">复制文本</string>
    <string name="toggle_reflow_mode" translatable="false">Toggle reflow mode</string>
    <string name="version" translatable="false">1.9</string>
    <string name="action_folderPDF">打开文件将爱</string>
    <string name="action_folderPDF_toast">不正确的路径，打开app下文件?</string>


    <string name="toast_remove_confirmation">确认要移除吗?</string>
    <string name="toast_directory">不能打开此目录.</string>
    <string name="toast_files">没有文件.</string>


    //File chooser

    <string name="choose_menu_2">分享</string>
    <string name="choose_menu_3">改名</string>
    <string name="choose_menu_4">删除</string>

    <string name="choose_hint">新文件名</string>

    <string name="action_sort">按排序</string>
    <string name="action_sort_title">按标题</string>
    <string name="action_sort_create">按时间</string>
    <string name="action_sort_ext">按类型</string>

    <string name="action_filter_title">按标题搜索</string>
    <string name="action_filter_create">按日期搜索</string>
    <string name="action_filter_ext">按类型搜索</string>

    <string name="filter_today">今天</string>
    <string name="filter_yesterday">昨天</string>
    <string name="filter_before">前天</string>
    <string name="filter_month">本月</string>
    <string name="filter_own">自定义</string>
    <string name="filter_clear">取消h</string>

    <string name="sort_title">标题</string>
    <string name="sort_date">日期</string>
    <string name="sort_extension">类型</string>

    <string name="choose_titleMain">文件</string>
    <string name="title_hint">标题</string>

</resources>
