<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/action_settings">

        <ListPreference
            android:defaultValue="80"
            android:entries="@array/listArrayImage"
            android:entryValues="@array/listValuesImage"
            android:icon="@drawable/file_image"
            android:key="imageQuality"
            android:summary="@string/pref_imageQuality_summary"
            android:title="@string/pref_imageQuality" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/backup_restore"
            android:key="backup"
            android:summary="@string/pref_backup_summary"
            android:title="@string/pref_backup" />

        <Preference
            android:icon="@drawable/folder"
            android:key="folder"
            android:summary="@string/pref_folder_summary"
            android:title="@string/pref_folder" />

        <Preference
            android:icon="@drawable/settings"
            android:key="settings"
            android:summary="@string/action_openSettings_summary"
            android:title="@string/action_openSettings" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_prefApp">

        <Preference
            android:icon="@drawable/copyright"
            android:key="license"
            android:summary="@string/pref_license_summary"
            android:title="@string/pref_license" />

        <Preference
            android:icon="@drawable/format_list_bulleted"
            android:key="changelog"
            android:summary="@string/action_changelog_summary"
            android:title="@string/action_changelog" />

        <Preference
            android:icon="@drawable/coin"
            android:key="donate"
            android:summary="@string/action_donate_summary"
            android:title="@string/action_donate" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/information_outline"
            android:key="help_notShow"
            android:summary="@string/pref_notShow_title_summary"
            android:title="@string/pref_notShow_title" />

    </PreferenceCategory>

</PreferenceScreen>