<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                style="@style/H1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/login_title_tip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="26dp"
                    android:background="@drawable/ic_wy_login_username" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="+86"
                    android:textColor="@color/c_8f8f8f"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_smart_login_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/login_tip_input_mobile"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:textColor="@color/c_333333"
                    android:textColorHint="@color/c_8f8f8f"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <!-- 使用验证码登录-->
            <LinearLayout
                android:id="@+id/ll_smart_login_mobile_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="26dp"
                    android:background="@drawable/ic_wy_login_password" />

                <EditText
                    android:id="@+id/et_smart_login_mobile_code"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/login_tip_input_smscode"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:textColor="@color/c_333333"
                    android:textColorHint="@color/c_8f8f8f"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_login_send_sms_code"
                    android:layout_width="95dp"
                    android:layout_height="35dp"
                    android:layout_gravity="right|center"
                    android:background="@drawable/smart_btn_send_code_stroke"
                    android:gravity="center"
                    android:text="@string/login_tip_send_smscode"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_15" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_smart_login_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:paddingTop="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_20"
                    android:text="联系客服"
                    android:visibility="gone"
                    android:textColor="@color/c_555555"
                    android:textSize="@dimen/text_size_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_20"
                    android:visibility="gone"
                    android:paddingBottom="@dimen/dp_20">

                    <TextView
                        android:id="@+id/tv_smart_login_by_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="密码登录"
                        android:textColor="@color/c_555555"
                        android:textSize="@dimen/text_size_14" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_smart_login_btn"
                style="@style/StyleBtn"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/login_btn_sign_in" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_smart_quick_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="right"
        android:text="点击注册"
        android:visibility="gone"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_14" />
</RelativeLayout>